Scrollbars fixed. For real this time.

--- a/options.css
+++ b/options.css
@@ -127,7 +127,7 @@
 
 	scrollbar,
 	scrollcorner {
-		background-color: #333 !important;
+		background: #333 !important;
 	}
 
 	#header,
